<?xml version="1.0"?>
<package format="3">
  <name>vio_stream_bridge</name>
  <version>0.1.0</version>
  <description>ROS 2 bridge for the Android VIO streamer TCP/UDP protocol.</description>

  <maintainer email="user@example.com">hp</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>rmw_cyclonedds_cpp</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
